apps/routing/overlays/sap-dev/ingress-kong-sap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r7-sap
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: sap-dev.98.85.131.168.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
